<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="10dip" android:orientation="vertical">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/app_name"
		android:gravity="center" android:textSize="28sp" android:paddingBottom="2dip"/>
	
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="Version 1.1."
		android:gravity="center" android:id="@+id/about_version" android:paddingBottom="5dip"/>
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/about_copyright"
		android:gravity="center"/>
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/about_license"
		android:gravity="center" android:paddingBottom="10dip"/>
	
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/about_forum_at"
		android:gravity="center" android:textSize="12sp"/>
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center" android:text="@string/about_forum_url" 
		android:textSize="12sp" android:id="@+id/about_src_link" android:paddingBottom="8dip"/>

<TextView android:textSize="12sp" android:paddingBottom="20dip" android:gravity="center" android:text="@string/chinese_translation_by" android:layout_height="wrap_content" android:id="@+id/chinese_translation_notice" android:layout_width="fill_parent"></TextView>
</LinearLayout>
