<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView android:id="@+id/sessionsProjectName"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="22sp" android:textColor="#ffffffff" android:paddingBottom="5dip" android:paddingLeft="9dip" android:text="Ajprod" android:paddingTop="1dip"/>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/buttonsbg"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:paddingLeft="5dip" android:paddingTop="4dip" android:gravity="center_vertical">
		<Button android:text="@string/StartButtonLabel" android:id="@+id/StartButton"
			android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical"
			android:textSize="22sp"></Button>
		<Button android:text="@string/StopButtonLabel" android:id="@+id/StopButton"
			android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical"
			android:textSize="22sp"></Button>
	</LinearLayout>
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<ListView android:id="@android:id/list" android:divider="#ff888888" android:dividerHeight="1dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:id="@android:id/empty"
			android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center"
			android:text="@string/no_sessions"/>
	</LinearLayout>
</LinearLayout>
